--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+annotated-types==0.7.0
+anyio==4.7.0
+click==8.1.7
 colorama==0.4.6
 contourpy==1.3.1
 cycler==0.12.1
+fastapi==0.115.6
 fonttools==4.55.2
+h11==0.14.0
+idna==3.10
 iniconfig==2.0.0
 joblib==1.4.2
 kiwisolver==1.4.7
@@ -11,12 +17,19 @@ packaging==24.2
 pandas==2.2.3
 pillow==11.0.0
 pluggy==1.5.0
+pydantic==2.10.3
+pydantic_core==2.27.1
 pyparsing==3.2.0
 pytest==8.3.4
 python-dateutil==2.9.0.post0
+python-multipart==0.0.19
 pytz==2024.2
 scikit-learn==1.5.2
 scipy==1.14.1
 six==1.17.0
+sniffio==1.3.1
+starlette==0.41.3
 threadpoolctl==3.5.0
+typing_extensions==4.12.2
 tzdata==2024.2
+uvicorn==0.32.1
